feat: CRUD question
